--- a/google-homepage.html
+++ b/google-homepage.html
@@ -2,10 +2,48 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Google Homepag</title>
+        <title>Google</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="stylesheet.css">
     </head>
 <!--Code Head End-->
+    
     <body>
-        <p>This is the first commit</p>
+        <!--Navbar-->
+        <nav id="navbar">
+            <ul id="nav-left">
+                <li>About</li>
+                <li>Store</li>
+            </ul>
+            <ul id="nav-right">
+                <li>Gmail</li>
+                <li>Images</li>
+            </ul>
+        </nav>
+        <!--Navbar End-->
+       
+        <!--Search-->
+        <img id="google-logo" src="google-logo.png" alt="google logo">
+        <label id="searchlabel" for="search">
+            <form name="search">
+                <input id="search" name="search" type="search">
+                <a href="#" target="_blank">Google Search</a> 
+                <a href="#" target="_blank">I'm feeling lucky</a> 
+            </form>
+        </label>
+        <!--Search End-->
+        <footer>
+            <ul id="footer-left">
+            <li>Advertising</li>
+            <li>Business</li>
+            <li>How Search works</li>
+            </ul>
+            <ul id="footer-right">
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>Settings</li>
+            </ul>
+        </footer>
+       </body>
+       </html>
+
