--- a/google-homepage.html
+++ b/google-homepage.html
@@ -1,49 +1,39 @@
-<!--Code Head Start-->
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Google</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="stylesheet.css">
+        <meta charset="UTF-8">
+<title>Google</title>
+<link rel="stylesheet" href="stylesheet.css">
     </head>
-<!--Code Head End-->
-    
-    <body>
-        <!--Navbar-->
-        <nav id="navbar">
-            <ul id="nav-left">
-                <li>About</li>
-                <li>Store</li>
-            </ul>
-            <ul id="nav-right">
-                <li>Gmail</li>
-                <li>Images</li>
-            </ul>
-        </nav>
-        <!--Navbar End-->
-       
-        <!--Search-->
-        <img id="google-logo" src="google-logo.png" alt="google logo">
-        <label id="searchlabel" for="search">
-            <form name="search">
-                <input id="search" name="search" type="search">
-                <a href="#" target="_blank">Google Search</a> 
-                <a href="#" target="_blank">I'm feeling lucky</a> 
-            </form>
-        </label>
-        <!--Search End-->
+        <ul id="nav-top">
+            <li><a href="https://github.com/Blissblass/google-homepage">About</a></li>
+            <li><a href="https://github.com/Blissblass/google-homepage">Store</a></li>
+            <div class="rightside">
+            <li><a href="https://github.com/Blissblass/google-homepage">Gmail</a></li>
+            <li><a href="hhttps://github.com/Blissblass/google-homepage">Images</a></li>
+            <li><a title="Apps" href="https://github.com/Blissblass/google-homepage" id="apps"></a></li>
+            <li><a href="hhttps://github.com/Blissblass/google-homepage" id="signIn">Sign in</a></li>
+        </div>
+        </ul>
+<main>
+        <img src="google-logo.png" alt="Google Logo" id="logo">
+        <form id="search">
+            <input type="search" id="searchinput">
+                <input type="button" class="button" value="Google Search">
+                <input type="button" class="button" value="I&#39;m Feeling Lucky">
+        </form>
+</main>
         <footer>
-            <ul id="footer-left">
-            <li>Advertising</li>
-            <li>Business</li>
-            <li>How Search works</li>
-            </ul>
-            <ul id="footer-right">
-            <li>Privacy</li>
-            <li>Terms</li>
-            <li>Settings</li>
+            <ul id="nav-bottom">
+                <li><a href="https://github.com/Blissblass/google-homepage">Advertising</a></li>
+                <li><a href="https://github.com/Blissblass/google-homepage">Business</a></li>
+                <li><a href="https://github.com/Blissblass/google-homepage">How Search works</a></li>
+                <div class="rightside">
+                <li><a href="https://github.com/Blissblass/google-homepage">Privacy</a></li>
+                <li><a href="https://github.com/Blissblass/google-homepage">Terms</a></li>
+                <li><a href="https://github.com/Blissblass/google-homepage">Settings</a></li>
+                </div>
             </ul>
         </footer>
-       </body>
-       </html>
-
+</body>
+</html> 
