Modify google-homepage.html, stylesheet.css [FINAL]

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -8,19 +8,18 @@
         <ul id="nav-top">
             <li><a href="https://github.com/Blissblass/google-homepage">About</a></li>
             <li><a href="https://github.com/Blissblass/google-homepage">Store</a></li>
-            <div class="rightside">
+            <div class="right">
             <li><a href="https://github.com/Blissblass/google-homepage">Gmail</a></li>
             <li><a href="hhttps://github.com/Blissblass/google-homepage">Images</a></li>
-            <li><a title="Apps" href="https://github.com/Blissblass/google-homepage" id="apps"></a></li>
-            <li><a href="hhttps://github.com/Blissblass/google-homepage" id="signIn">Sign in</a></li>
+            <li><a href="hhttps://github.com/Blissblass/google-homepage">Sign in</a></li>
         </div>
         </ul>
 <main>
-        <img src="google-logo.png" alt="Google Logo" id="logo">
+        <img src="google-logo.png" alt="Logo" id="logo">
         <form id="search">
             <input type="search" id="searchinput">
                 <input type="button" class="button" value="Google Search">
-                <input type="button" class="button" value="I&#39;m Feeling Lucky">
+                <input type="button" class="button" value="I'm Feeling Lucky">
         </form>
 </main>
         <footer>
@@ -28,7 +27,7 @@
                 <li><a href="https://github.com/Blissblass/google-homepage">Advertising</a></li>
                 <li><a href="https://github.com/Blissblass/google-homepage">Business</a></li>
                 <li><a href="https://github.com/Blissblass/google-homepage">How Search works</a></li>
-                <div class="rightside">
+                <div class="right">
                 <li><a href="https://github.com/Blissblass/google-homepage">Privacy</a></li>
                 <li><a href="https://github.com/Blissblass/google-homepage">Terms</a></li>
                 <li><a href="https://github.com/Blissblass/google-homepage">Settings</a></li>
